# logo-retrieval

./: 1_build_all.sh  2_crop_images.sh  3_extract_feature.sh  4_image_test.sh  CMakeLists.txt  README.md  configure  crop_images.cc  directory.cc  directory.h  extract_feature.cc  image_test.cc
